Added Sonarqube: - Fixed some warnings